syntax = "proto3";

package ai.pipestream.events;

import "google/protobuf/timestamp.proto";

message DocumentUploadedEvent {
  string doc_id = 1;
  string s3_key = 2;
  string connector_id = 3;
  string account_id = 4;
  map<string, string> metadata = 5;
  // From PipeDoc, if needed
  string filename = 6;
  string mime_type = 7;
  string path = 8;
  google.protobuf.Timestamp creation_date = 9;
  google.protobuf.Timestamp last_modified_date = 10;
}
